--- a/config/detekt/detekt.yml
+++ b/config/detekt/detekt.yml
@@ -15,6 +15,8 @@ complexity:
     thresholdInObjects: 31
     thresholdInEnums: 31
     ignoreOverridden: true
+  LargeClass:
+    active: false
 
 empty-blocks:
   EmptyFunctionBlock:
