--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,7 +4,6 @@ opentelemetry-instrumentation-alpha = "2.22.0-alpha"
 opentelemetry-semconv = "1.37.0"
 opentelemetry-semconv-alpha = "1.37.0-alpha"
 opentelemetry-contrib = "1.52.0-alpha"
-mockito = "5.20.0"
 junit = "6.0.1"
 byteBuddy = "1.18.1"
 okhttp = "5.3.2"
@@ -63,8 +62,6 @@ androidx-test-core = "androidx.test:core:1.7.0"
 androidx-test-rules = "androidx.test:rules:1.7.0"
 androidx-test-runner = "androidx.test:runner:1.7.0"
 androidx-junit = "androidx.test.ext:junit:1.3.0"
-mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockito" }
-mockito-junit-jupiter = { module = "org.mockito:mockito-junit-jupiter", version.ref = "mockito" }
 mockk = "io.mockk:mockk:1.14.6"
 junit-jupiter-api = { module = "org.junit.jupiter:junit-jupiter-api", version.ref = "junit" }
 junit-jupiter-engine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "junit" }
@@ -92,7 +89,7 @@ androidx-junit-ktx = { group = "androidx.test.ext", name = "junit-ktx", version.
 kover-plugin = { module = "org.jetbrains.kotlinx.kover:org.jetbrains.kotlinx.kover.gradle.plugin", version.ref = "koverGradlePlugin" }
 
 [bundles]
-mocking = ["mockito-core", "mockito-junit-jupiter", "mockk"]
+mocking = ["mockk"]
 junit = ["junit-jupiter-api", "junit-jupiter-engine", "junit-vintage-engine"]
 
 [plugins]
