--- a/gradle.properties
+++ b/gradle.properties
@@ -23,5 +23,5 @@ android.useAndroidX=true
 
 android.minSdk=21
 android.compileSdk=36
-version=0.17.0
+version=1.0.0-rc.1
 group=io.opentelemetry.android
