--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -61,6 +61,12 @@
       "enabled": false
     },
     {
+      // androidx.lifecycle 2.10.0+ requires minSdk 23, but we still support minSdk 21 in 1.x
+      "matchPackagePrefixes": ["androidx.lifecycle"],
+      "matchUpdateTypes": ["major", "minor"],
+      "enabled": false
+    },
+    {
       // navigation-fragment 2.7.0 and above require android api 34+, which we are not ready for
       // yet due to android gradle plugin only supporting min 33.
       "matchPackageNames": ["androidx.browser:browser"],
