--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -61,9 +61,14 @@
       "enabled": false
     },
     {
-      // navigation-fragment 2.7.0 and above require android api 34+, which we are not ready for
-      // yet due to android gradle plugin only supporting min 33.
-      "matchPackageNames": ["androidx.browser:browser"],
+      // androidx.lifecycle 2.10.0+ requires minSdk 23, but we still support minSdk 21 in 1.x
+      "matchPackagePrefixes": ["androidx.lifecycle"],
+      "matchUpdateTypes": ["major", "minor"],
+      "enabled": false
+    },
+    {
+      // androidx.lifecycle 1.12.0+ requires minSdk 23, but we still support minSdk 21 in 1.x
+      "matchPackageNames": ["androidx.activity:activity-compose"],
       "matchUpdateTypes": ["major", "minor"],
       "enabled": false
     },
