--- a/config/detekt/detekt.yml
+++ b/config/detekt/detekt.yml
@@ -27,6 +27,8 @@ exceptions:
     active: false
 
 style:
+  CollapsibleIfStatements:
+    active: true
   ForbiddenComment:
     active: false
   MagicNumber:
