--- a/demo-app/compose.yaml
+++ b/demo-app/compose.yaml
@@ -9,7 +9,7 @@ services:
       - "4317:4317" # OTLP gRPC
       - "4318:4318" # OTLP HTTP
   jaeger:
-    image: "jaegertracing/all-in-one:1.60@sha256:4fd2d70fa347d6a47e79fcb06b1c177e6079f92cba88b083153d56263082135e"
+    image: "jaegertracing/all-in-one@sha256:ab6f1a1f0fb49ea08bcd19f6b84f6081d0d44b364b6de148e1798eb5816bacac"
     environment:
       - COLLECTOR_OTLP_ENABLED=true
       - COLLECTOR_OTLP_HTTP_HOST_PORT=0.0.0.0:4318
