post v1.0.0 release changes

--- a/gradle.properties
+++ b/gradle.properties
@@ -23,5 +23,5 @@ android.useAndroidX=true
 
 android.minSdk=21
 android.compileSdk=36
-version=1.0.0-rc.2
+version=1.1.0
 group=io.opentelemetry.android
