Fix detekt configuration for AGP 9

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -24,7 +24,7 @@ jobs:
       - name: touch local props
         run: touch demo-app/local.properties
       - name: run gradle check
-        run: ./gradlew check -x detekt detektDebug detektDebugUnitTest detektDebugAndroidTest --stacktrace
+        run: ./gradlew check --stacktrace
       - name: create test coverage report
         run: ./gradlew koverXmlReport
       - name: Upload coverage reports to Codecov
